--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -261,7 +261,23 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.05181">https://arxiv.org/abs/2004.05181</a></span> How non-Fermi liquids cure their infrared divergences ******</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09080">https://arxiv.org/abs/2004.09080</a></span> Notes on multiple superconducting phases in UTe2 —Third transition—<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.01947">https://arxiv.org/abs/2002.01947</a></span> Gauge theories for the thermal Hall effect ***** (Subir Sachdev)</p>
-<p class="p3"><a href="https://arxiv.org/abs/2004.09254">https://arxiv.org/abs/2004.09254</a><span class="s2"> The Noether Theorems in Context</span></p>
+<p class="p3"><a href="https://arxiv.org/abs/2004.09254">https://arxiv.org/abs/2004.09254</a><span class="s2"> The Noether Theorems in Context</span></p><br>
+<p class="p1">20200422</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09577">https://arxiv.org/abs/2004.09577</a></span> Emergent conformal symmetry in non-unitary random dynamics of free fermions *** (Matthew Fisher, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09997">https://arxiv.org/abs/2004.09997</a></span> Emergent geometry in recursive renormalization group transformations *** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09522">https://arxiv.org/abs/2004.09522</a></span> Gate-Tunable Fractional Chern Insulators in Twisted Double Bilayer Graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09543">https://arxiv.org/abs/2004.09543</a></span> Gravity-Matter Feynman Rules for any Valence ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200423</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10420">https://arxiv.org/abs/2004.10420</a></span> New term in effective field theory at fixed topology **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10348">https://arxiv.org/abs/2004.10348</a></span> Topological Anderson insulating phases in the long-range Su-Schrieffer-Heeger model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10582">https://arxiv.org/abs/2004.10582</a></span> Strain induced quantum Hall effect of excitons in graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10363">https://arxiv.org/abs/2004.10363</a></span> DMRG study of strongly interacting Z2 flatbands: a toy model inspired by twisted bilayer graphene ** (Paul Eugenio, Ceren Dag)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10217">https://arxiv.org/abs/2004.10217</a></span> The effect of interorbital scattering on superconductivity in doped Dirac materials<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1808.05227">https://arxiv.org/abs/1808.05227</a></span> Nonperturbative properties of Yang-Mills theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.05283">https://arxiv.org/abs/1911.05283</a></span> Note about the spin connection in general relativity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00295">https://arxiv.org/abs/2004.00295</a></span> Inhomogeneous phases in the Gross-Neveu model in 1 + 1 dimensions at finite number of flavors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10525">https://arxiv.org/abs/2004.10525</a></span> THE FIELD-THEORETIC APPROACH IN GENERAL RELATIVITY AND OTHER METRIC THEORIES. A REVIEW<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
