--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -277,7 +277,44 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1808.05227">https://arxiv.org/abs/1808.05227</a></span> Nonperturbative properties of Yang-Mills theories ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.05283">https://arxiv.org/abs/1911.05283</a></span> Note about the spin connection in general relativity ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00295">https://arxiv.org/abs/2004.00295</a></span> Inhomogeneous phases in the Gross-Neveu model in 1 + 1 dimensions at finite number of flavors ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10525">https://arxiv.org/abs/2004.10525</a></span> THE FIELD-THEORETIC APPROACH IN GENERAL RELATIVITY AND OTHER METRIC THEORIES. A REVIEW<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10525">https://arxiv.org/abs/2004.10525</a></span> THE FIELD-THEORETIC APPROACH IN GENERAL RELATIVITY AND OTHER METRIC THEORIES. A REVIEW</p><br>
+<p class="p1">20200424</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11340">https://arxiv.org/abs/2004.11340</a></span> Electrically tunable correlated and topological states in twisted monolayer-bilayer graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11050">https://arxiv.org/abs/2004.11050</a></span> Topological and non-topological features of generalized Su-Schrieffer-Heeger models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11269">https://arxiv.org/abs/2004.11269</a></span> Fast scrambling without appealing to holographic duality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11095">https://arxiv.org/abs/2004.11095</a></span> Large-momentun tail of 1D Fermi gases with spin-orbit coupling<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10789">https://arxiv.org/abs/2004.10789</a></span> Bosonization in 2+1 dimensions via Chern-Simons bosonic particle-vortex duality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10790">https://arxiv.org/abs/2004.10790</a></span> Homogenization of hydrodynamic transport in Dirac fluids ** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11179">https://arxiv.org/abs/2004.11179</a></span> Theory of the superconductivity of UGe2 revisited. ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10758">https://arxiv.org/abs/2004.10758</a></span> Berry Phase in Quantum Field Theory: Diabolical Points and Boundary Phenomena *****</p>
+<p class="p2"><a href="https://arxiv.org/abs/2004.10753">https://arxiv.org/abs/2004.10753</a><span class="s2"> Rethinking α-RuCl3<br>
+</span></p>
+<p class="p1">20200427</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.10298">https://arxiv.org/abs/1909.10298</a></span> The Hellmann-Feynman theorem at finite temperature<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.09675">https://arxiv.org/abs/1910.09675</a></span> Atiyah-Patodi-Singer index on a lattice<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11871">https://arxiv.org/abs/2004.11871</a></span> Caging of Short-Range Interactions in All Bands Flat Lattices: Part I<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11880">https://arxiv.org/abs/2004.11880</a></span> Caging of Short-Range Interactions in All Bands Flat Lattices: Part II<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11386">https://arxiv.org/abs/2004.11386</a></span> Solidity without inhomogeneity: Perfectly homogeneous, weakly coupled, UV-complete solids<span class="Apple-converted-space"> </span></p>
+<p class="p3"><br></p>
+<p class="p1">20200428</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12840">https://arxiv.org/abs/2004.12840</a></span> Topological Magnetoelectric Effect: Nonlinear Time-Reversal-Symmetric Response, Witten Effect, and Half-Integer Quantum Hall Effect ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12154">https://arxiv.org/abs/2004.12154</a></span> Bulk viscosity of resonating fermions revisited: Kubo formula, sum rule, and the dimer and high-temperature limits ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12954">https://arxiv.org/abs/2004.12954</a></span> Comprehensive study of the phase diagram of the spin-1/2 Kitaev-Heisenberg-Gamma chain *** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12650">https://arxiv.org/abs/2004.12650</a></span> Tailoring high-TN interlayer antiferromagnetism in a van der Waals itinerant magnet *** (Han Woong Yeom, Jun Sung Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11904">https://arxiv.org/abs/2004.11904</a></span> A relation between chiral central charge and ground state degeneracy in 2+1-dimensional topological orders *** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12785">https://arxiv.org/abs/2004.12785</a></span> The Resistivity of High-Tc Cuprates ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12515">https://arxiv.org/abs/2004.12515</a></span> Sr2MoO4 and Sr2RuO4: Disentangling the Roles of Hunds and van Hove Physics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12536">https://arxiv.org/abs/2004.12536</a></span> Correlation-induced insulating topological phases at charge neutrality in twisted bilayer graphene ** (Rafael Fernandes, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12928">https://arxiv.org/abs/2004.12928</a></span> Continuous matrix product operator approach to finite temperature quantum states<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12624">https://arxiv.org/abs/2004.12624</a></span> Spin-orbit coupled superconductivity: Rashba–Hubbard model on the square lattice<span class="Apple-converted-space"> </span></p>
+<p class="p2"><a href="https://arxiv.org/abs/2004.12758">https://arxiv.org/abs/2004.12758</a><span class="s2"> Introduction to modified gravity<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12191">https://arxiv.org/abs/2004.12191</a></span> Causality of black holes in 4-dimensional Einstein-Gauss-Bonnet-Maxwell theory (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.03363">https://arxiv.org/abs/1907.03363</a></span> JT Gravity and the Ensembles of Random Matrix Theory *** (Douglas Stanford, Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.02687">https://arxiv.org/abs/1904.02687</a></span> Confinement of fermions in tachyon matter<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.01987">https://arxiv.org/abs/1910.01987</a></span> THE ATIYAH-PATODI-SINGER INDEX AND DOMAIN-WALL FERMION DIRAC OPERATORS<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02897">https://arxiv.org/abs/2001.02897</a></span> Second law of black hole thermodynamics<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.11938">https://arxiv.org/abs/2001.11938</a></span> TQFT, Symmetry Breaking, and Finite Gauge Theory in 3+1D<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12080">https://arxiv.org/abs/2004.12080</a></span> Alice and the Foucault Pendulum: the land of action-angle variables<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
