--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -288,7 +288,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.11179">https://arxiv.org/abs/2004.11179</a></span> Theory of the superconductivity of UGe2 revisited. ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10758">https://arxiv.org/abs/2004.10758</a></span> Berry Phase in Quantum Field Theory: Diabolical Points and Boundary Phenomena *****</p>
 <p class="p2"><a href="https://arxiv.org/abs/2004.10753">https://arxiv.org/abs/2004.10753</a><span class="s2"> Rethinking α-RuCl3<br>
-</span></p>
+</span></p><br>
 <p class="p1">20200427</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.10298">https://arxiv.org/abs/1909.10298</a></span> The Hellmann-Feynman theorem at finite temperature<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.09675">https://arxiv.org/abs/1910.09675</a></span> Atiyah-Patodi-Singer index on a lattice<span class="Apple-converted-space"> </span></p>
@@ -314,7 +314,26 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.01987">https://arxiv.org/abs/1910.01987</a></span> THE ATIYAH-PATODI-SINGER INDEX AND DOMAIN-WALL FERMION DIRAC OPERATORS<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02897">https://arxiv.org/abs/2001.02897</a></span> Second law of black hole thermodynamics<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.11938">https://arxiv.org/abs/2001.11938</a></span> TQFT, Symmetry Breaking, and Finite Gauge Theory in 3+1D<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12080">https://arxiv.org/abs/2004.12080</a></span> Alice and the Foucault Pendulum: the land of action-angle variables<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12080">https://arxiv.org/abs/2004.12080</a></span> Alice and the Foucault Pendulum: the land of action-angle variables<span class="Apple-converted-space"> </span></p><br>
+<p class="p1">20200429</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13613">https://arxiv.org/abs/2004.13613</a></span> Field Theory of Dissipative Systems with Gapped Momentum States<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12291">https://arxiv.org/abs/2004.12291</a></span> Nature of Protected Zero Energy States in Penrose Quasicrystals (Rafael Fernandes, Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13043">https://arxiv.org/abs/2004.13043</a></span> Color degeneracy of topological defects in quadratic band touching systems ***** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13380">https://arxiv.org/abs/2004.13380</a></span> Topological modes in relativistic hydrodynamics<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13072">https://arxiv.org/abs/2004.13072</a></span> Entanglement dynamics of a many-body localized system coupled to a bath ** (Michael Knap, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13034">https://arxiv.org/abs/2004.13034</a></span> Bistability and time crystals in long-ranged directed percolation ** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13533">https://arxiv.org/abs/2004.13533</a></span> Thermodynamics from relative entropy<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13220">https://arxiv.org/abs/2004.13220</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum-critical point in a metal. I: The γ model and its phase diagram at T = 0. The case 0 &lt; γ &lt; 1. (Andrey Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13068">https://arxiv.org/abs/2004.13068</a></span> Topological orders competing for the Dirac surface state in FeSeTe surfaces ** (Suk Bum Chung, Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13591">https://arxiv.org/abs/2004.13591</a></span> On Effective Field Theories and Emergence: A Response to Luu and Meißner<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13191">https://arxiv.org/abs/2004.13191</a></span> Roman Jackiw: A Beacon in a Golden Period of Theoretical Physics<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200430</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14013">https://arxiv.org/abs/2004.14013</a></span> Unified theory to characterize Floquet topological phases by quench dynamics<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14370">https://arxiv.org/abs/2004.14370</a></span> Entanglement Hamiltonian of the 1+1-dimensional free, compactified boson conformal field theory ** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14376">https://arxiv.org/abs/2004.14376</a></span> State-dependent thermalization in SYK model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13723">https://arxiv.org/abs/2004.13723</a></span> Testing Ising Topological Order in α-RuCl3 Under In-Plane Magnetic Fields *** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14272">https://arxiv.org/abs/2004.14272</a></span> BV quantization in perturbative algebraic QFT: Fundamental concepts and perspectives **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
