--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -126,6 +126,17 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20200501</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14391">https://arxiv.org/abs/2004.14391</a></span> Deconfined Metal-Insulator Transitions in Quantum Hall Bilayers ***** (Liujun Zou, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14964">https://arxiv.org/abs/2004.14964</a></span> Topological Flat Bands and Correlated States in Twisted Monolayer-Bilayer Graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14981">https://arxiv.org/abs/2004.14981</a></span> Superconductivity in Weyl semimetals in a strong pseudomagnetic field **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14744">https://arxiv.org/abs/2004.14744</a></span> Direct observation of energy band attraction effect in non-Hermitian systems<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.15022">https://arxiv.org/abs/2004.15022</a></span> Hofstadter butterfly and Floquet topological insulators in minimally twisted bilayer graphene ** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.15019">https://arxiv.org/abs/2004.15019</a></span> Synthetic non-Abelian gauge fields and gravitomagnetic effects in tilted Dirac cone systems<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14633">https://arxiv.org/abs/2004.14633</a></span> From a continuous to a discrete time crystal<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14669">https://arxiv.org/abs/2004.14669</a></span> Kosterlitz-Thouless phase and Zd topological quantum phase<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14393">https://arxiv.org/abs/2004.14393</a></span> Odd Fracton Theories, Proximate Orders, and Parton Constructions *** (Michael Pretko, S. A. Parameswaran, and Michael Hermele)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14387">https://arxiv.org/abs/2004.14387</a></span> Duality and Mock Modularity ** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02972">https://arxiv.org/abs/2002.02972</a></span> Deconfined metallic quantum criticality: a U(2) gauge theoretic approach ***** (Liujun Zou, Debanjan Chowdhury)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
