--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -136,7 +136,22 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14669">https://arxiv.org/abs/2004.14669</a></span> Kosterlitz-Thouless phase and Zd topological quantum phase<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14393">https://arxiv.org/abs/2004.14393</a></span> Odd Fracton Theories, Proximate Orders, and Parton Constructions *** (Michael Pretko, S. A. Parameswaran, and Michael Hermele)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14387">https://arxiv.org/abs/2004.14387</a></span> Duality and Mock Modularity ** (Edward Witten)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02972">https://arxiv.org/abs/2002.02972</a></span> Deconfined metallic quantum criticality: a U(2) gauge theoretic approach ***** (Liujun Zou, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02972">https://arxiv.org/abs/2002.02972</a></span> Deconfined metallic quantum criticality: a U(2) gauge theoretic approach ***** (Liujun Zou, Debanjan Chowdhury)</p><br>
+<p class="p1">20200504</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00222">https://arxiv.org/abs/2005.00222</a></span> Theory of shift current in Anderson insulator *** (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00027">https://arxiv.org/abs/2005.00027</a></span> Topological Superconductivity in Skyrmion Lattices<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.09919">https://arxiv.org/abs/1812.09919</a></span> Algebraic Structures in the Coupling of Gravity to Gauge Theories<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200505</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00604">https://arxiv.org/abs/2005.00604</a></span> Nonunitary Scaling Theory of Non-Hermitian Localization *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01439">https://arxiv.org/abs/2005.01439</a></span> Quantum Magnetism in Wannier-Obstructed Mott Insulators ***(Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01258">https://arxiv.org/abs/2005.01258</a></span> Gate tunable topological flat bands in twisted monolayer-bilayer graphene (Youngju Park, Jeil Jung)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01704">https://arxiv.org/abs/2005.01704</a></span> Nonnormality-protected Hermitian zero modes: application of pseudospectra ** (Masatoshi Sato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00918">https://arxiv.org/abs/2005.00918</a></span> Langevin Simulations of the Half-Filled Cubic Holstein Model (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01009">https://arxiv.org/abs/2005.01009</a></span> ANALYTICITY AND CAUSALITY IN CONFORMAL FIELD THEORY<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00015">https://arxiv.org/abs/2004.00015</a></span> Exotic U(1) Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.06115">https://arxiv.org/abs/2004.06115</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
