--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -151,7 +151,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01009">https://arxiv.org/abs/2005.01009</a></span> ANALYTICITY AND CAUSALITY IN CONFORMAL FIELD THEORY<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00015">https://arxiv.org/abs/2004.00015</a></span> Exotic U(1) Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.06115">https://arxiv.org/abs/2004.06115</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.06115">https://arxiv.org/abs/2004.06115</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p><br>
+<p class="p1">20200506</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04008">https://arxiv.org/abs/1909.04008</a></span> Holographic Complex Conformal Field Theories **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01725">https://arxiv.org/abs/2005.01725</a></span> Magnetophonons &amp; type-B Goldstones from Hydrodynamics to Holography<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01990">https://arxiv.org/abs/2005.01990</a></span> Quantum criticality of magnetic catalysis in two-dimensional correlated Dirac fermions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02332">https://arxiv.org/abs/2005.02332</a></span> Fermionic criticality is shaped by Fermi surface topology: a case study of the Tomonaga-Luttinger liquid ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02364">https://arxiv.org/abs/2005.02364</a></span> Dimensional crossover and phase transitions in coupled chains: DMRG results<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02169">https://arxiv.org/abs/2005.02169</a></span> Electrical band flattening, valley flux, and superconductivity in twisted trilayer graphene<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200507</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02396">https://arxiv.org/abs/2005.02396</a></span> Unquantized thermal Hall effect in quantum spin liquids with spinon Fermi surfaces *** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02406">https://arxiv.org/abs/2005.02406</a></span> Transport across twist angle domains in moire ́ graphene *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02882">https://arxiv.org/abs/2005.02882</a></span> Nonlinear parameter-gauge coupling approach to generalization of generalized Thouless pumps and −1-form anomaly ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02748">https://arxiv.org/abs/2005.02748</a></span> Benchmarking global SU(2) symmetry in 2d tensor network algorithms ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02491">https://arxiv.org/abs/2005.02491</a></span> Can magnetic field transform a superconductor into a Bose metal? *** (Alexei Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.05565">https://arxiv.org/abs/1912.05565</a></span> An Exactly Solvable Model for a 4 + 1D Beyond-Cohomology Symmetry Protected Topological Phase *** (Jeongwan Haah, Matthew Hastings)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01231">https://arxiv.org/abs/2005.01231</a></span> TOWARDS FIELD THEORY OF TURBULENCE ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02378">https://arxiv.org/abs/2005.02378</a></span> Single-Copy Certification of Two-Qubit Gates without Entanglement *** (Joonwoo Bae)</p>
+<p class="p2"><br></p>
+<p class="p1">20200508</p>
+<p class="p3"><a href="https://arxiv.org/abs/2005.03015">https://arxiv.org/abs/2005.03015</a><span class="s2"> Vortices &amp; Fractons<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03399">https://arxiv.org/abs/2005.03399</a></span> Topological insulator in Kitaev spin liquids<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03138">https://arxiv.org/abs/2005.03138</a></span> Condensed Matter Physics in Time Crystals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03656">https://arxiv.org/abs/2005.03656</a></span> Chiral Induced Spin Selectivity as a Spontaneous Intertwined Order<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States:Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
