--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -127,20 +127,20 @@ a:hover {text-decoration: underline; color: darkgray;}
 <br>
 <p class="p1">20200501</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14391">https://arxiv.org/abs/2004.14391</a></span> Deconfined Metal-Insulator Transitions in Quantum Hall Bilayers ***** (Liujun Zou, Debanjan Chowdhury)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14964">https://arxiv.org/abs/2004.14964</a></span> Topological Flat Bands and Correlated States in Twisted Monolayer-Bilayer Graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14964">https://arxiv.org/abs/2004.14964</a></span> Topological Flat Bands and Correlated States in Twisted Monolayer-Bilayer Graphene</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14981">https://arxiv.org/abs/2004.14981</a></span> Superconductivity in Weyl semimetals in a strong pseudomagnetic field **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14744">https://arxiv.org/abs/2004.14744</a></span> Direct observation of energy band attraction effect in non-Hermitian systems<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14744">https://arxiv.org/abs/2004.14744</a></span> Direct observation of energy band attraction effect in non-Hermitian systems</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.15022">https://arxiv.org/abs/2004.15022</a></span> Hofstadter butterfly and Floquet topological insulators in minimally twisted bilayer graphene ** (Sankar Das Sarma)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.15019">https://arxiv.org/abs/2004.15019</a></span> Synthetic non-Abelian gauge fields and gravitomagnetic effects in tilted Dirac cone systems<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14633">https://arxiv.org/abs/2004.14633</a></span> From a continuous to a discrete time crystal<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14669">https://arxiv.org/abs/2004.14669</a></span> Kosterlitz-Thouless phase and Zd topological quantum phase<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.15019">https://arxiv.org/abs/2004.15019</a></span> Synthetic non-Abelian gauge fields and gravitomagnetic effects in tilted Dirac cone systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14633">https://arxiv.org/abs/2004.14633</a></span> From a continuous to a discrete time crystal</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14669">https://arxiv.org/abs/2004.14669</a></span> Kosterlitz-Thouless phase and Zd topological quantum phase</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14393">https://arxiv.org/abs/2004.14393</a></span> Odd Fracton Theories, Proximate Orders, and Parton Constructions *** (Michael Pretko, S. A. Parameswaran, and Michael Hermele)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14387">https://arxiv.org/abs/2004.14387</a></span> Duality and Mock Modularity ** (Edward Witten)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02972">https://arxiv.org/abs/2002.02972</a></span> Deconfined metallic quantum criticality: a U(2) gauge theoretic approach ***** (Liujun Zou, Debanjan Chowdhury)</p><br>
 <p class="p1">20200504</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00222">https://arxiv.org/abs/2005.00222</a></span> Theory of shift current in Anderson insulator *** (Naoto Nagaosa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00027">https://arxiv.org/abs/2005.00027</a></span> Topological Superconductivity in Skyrmion Lattices<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.09919">https://arxiv.org/abs/1812.09919</a></span> Algebraic Structures in the Coupling of Gravity to Gauge Theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00027">https://arxiv.org/abs/2005.00027</a></span> Topological Superconductivity in Skyrmion Lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.09919">https://arxiv.org/abs/1812.09919</a></span> Algebraic Structures in the Coupling of Gravity to Gauge Theories</p>
 <p class="p2"><br></p>
 <p class="p1">20200505</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00604">https://arxiv.org/abs/2005.00604</a></span> Nonunitary Scaling Theory of Non-Hermitian Localization *** (Shinsei Ryu)</p>
@@ -148,17 +148,17 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01258">https://arxiv.org/abs/2005.01258</a></span> Gate tunable topological flat bands in twisted monolayer-bilayer graphene (Youngju Park, Jeil Jung)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01704">https://arxiv.org/abs/2005.01704</a></span> Nonnormality-protected Hermitian zero modes: application of pseudospectra ** (Masatoshi Sato)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.00918">https://arxiv.org/abs/2005.00918</a></span> Langevin Simulations of the Half-Filled Cubic Holstein Model (Zi Yang Meng)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01009">https://arxiv.org/abs/2005.01009</a></span> ANALYTICITY AND CAUSALITY IN CONFORMAL FIELD THEORY<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01009">https://arxiv.org/abs/2005.01009</a></span> ANALYTICITY AND CAUSALITY IN CONFORMAL FIELD THEORY</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00015">https://arxiv.org/abs/2004.00015</a></span> Exotic U(1) Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.06115">https://arxiv.org/abs/2004.06115</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory *** (Nathan Seiberg)</p><br>
 <p class="p1">20200506</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04008">https://arxiv.org/abs/1909.04008</a></span> Holographic Complex Conformal Field Theories **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01725">https://arxiv.org/abs/2005.01725</a></span> Magnetophonons &amp; type-B Goldstones from Hydrodynamics to Holography<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01990">https://arxiv.org/abs/2005.01990</a></span> Quantum criticality of magnetic catalysis in two-dimensional correlated Dirac fermions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01725">https://arxiv.org/abs/2005.01725</a></span> Magnetophonons &amp; type-B Goldstones from Hydrodynamics to Holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01990">https://arxiv.org/abs/2005.01990</a></span> Quantum criticality of magnetic catalysis in two-dimensional correlated Dirac fermions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02332">https://arxiv.org/abs/2005.02332</a></span> Fermionic criticality is shaped by Fermi surface topology: a case study of the Tomonaga-Luttinger liquid ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02364">https://arxiv.org/abs/2005.02364</a></span> Dimensional crossover and phase transitions in coupled chains: DMRG results<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02169">https://arxiv.org/abs/2005.02169</a></span> Electrical band flattening, valley flux, and superconductivity in twisted trilayer graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02364">https://arxiv.org/abs/2005.02364</a></span> Dimensional crossover and phase transitions in coupled chains: DMRG results</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02169">https://arxiv.org/abs/2005.02169</a></span> Electrical band flattening, valley flux, and superconductivity in twisted trilayer graphene</p>
 <p class="p2"><br></p>
 <p class="p1">20200507</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02396">https://arxiv.org/abs/2005.02396</a></span> Unquantized thermal Hall effect in quantum spin liquids with spinon Fermi surfaces *** (Subir Sachdev)</p>
@@ -171,11 +171,33 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.02378">https://arxiv.org/abs/2005.02378</a></span> Single-Copy Certification of Two-Qubit Gates without Entanglement *** (Joonwoo Bae)</p>
 <p class="p2"><br></p>
 <p class="p1">20200508</p>
-<p class="p3"><a href="https://arxiv.org/abs/2005.03015">https://arxiv.org/abs/2005.03015</a><span class="s2"> Vortices &amp; Fractons<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03399">https://arxiv.org/abs/2005.03399</a></span> Topological insulator in Kitaev spin liquids<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03138">https://arxiv.org/abs/2005.03138</a></span> Condensed Matter Physics in Time Crystals<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03656">https://arxiv.org/abs/2005.03656</a></span> Chiral Induced Spin Selectivity as a Spontaneous Intertwined Order<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States:Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects (Juven Wang)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2005.03015">https://arxiv.org/abs/2005.03015</a><span class="s2"> Vortices &amp; Fractons</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03399">https://arxiv.org/abs/2005.03399</a></span> Topological insulator in Kitaev spin liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03138">https://arxiv.org/abs/2005.03138</a></span> Condensed Matter Physics in Time Crystals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03656">https://arxiv.org/abs/2005.03656</a></span> Chiral Induced Spin Selectivity as a Spontaneous Intertwined Order</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States:Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects (Juven Wang)</p><br>
+<p class="p1">20200511</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03674.pdf">https://arxiv.org/pdf/2005.03674.pdf</a></span> Unconventional Topological Insulators from Extended Topological Band Degeneracies</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03676.pdf">https://arxiv.org/pdf/2005.03676.pdf</a></span> Thermal Order in Conformal Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04124.pdf">https://arxiv.org/pdf/2005.04124.pdf</a></span> Symmetry-mixed bound-state order: extended degeneracy of (d + ig)-superconductivity in Sr2RuO4 **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04013.pdf">https://arxiv.org/pdf/2005.04013.pdf</a></span> A Unified Description of Superconductivity: Electron Density Dynamic’s Response to Phonons at the Brillouin Zone Boundary Driven Real Space Electron-Hole Pairing Characterized by CPT Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03679.pdf">https://arxiv.org/pdf/2005.03679.pdf</a></span> Time-reversal-invariant C2-symmetric higher-order topological superconductors *** (Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.12191.pdf">https://arxiv.org/pdf/2004.12191.pdf</a></span> Causality of black holes in 4-dimensional Einstein-Gauss-Bonnet-Maxwell theory (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1912.10997.pdf">https://arxiv.org/pdf/1912.10997.pdf</a></span> Markov Chain Monte Carlo Methods in Quantum Field Theories: A Modern Primer</p>
+<p class="p2"><br></p>
+<p class="p1">20200512</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04821.pdf">https://arxiv.org/pdf/2005.04821.pdf</a></span> Topological characterization of one-dimensional open fermionic systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.05028.pdf">https://arxiv.org/pdf/2005.05028.pdf</a></span> Magnetic monopoles and fermion number violation in chiral matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04433.pdf">https://arxiv.org/pdf/2005.04433.pdf</a></span> Hinge solitons in three-dimensional second-order topological insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04678.pdf">https://arxiv.org/pdf/2005.04678.pdf</a></span> A new decomposition of the Kubo-Bastin formula</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04250.pdf">https://arxiv.org/pdf/2005.04250.pdf</a></span> Non-Wilson-Fisher kinks of O(N) numerical bootstrap: from the deconfined phase transition to a putative new family of CFTs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04238.pdf">https://arxiv.org/pdf/2005.04238.pdf</a></span> Density functional approach to correlated moir ́e states: itinerant magnetism *** (Hiroki Isobe, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04327.pdf">https://arxiv.org/pdf/2005.04327.pdf</a></span> <b>Quest for New Quantum States via Field-Editing Technology</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04695.pdf">https://arxiv.org/pdf/2005.04695.pdf</a></span> Quantum spin liquids in a square lattice subject to an Abelian flux and its experimental observation in cold atoms or photonic systems ** (Jinwu Ye)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.05247.pdf">https://arxiv.org/pdf/2005.05247.pdf</a></span> Perspective on Metallic Antiferromagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04932.pdf">https://arxiv.org/pdf/2005.04932.pdf</a></span> Shift of the critical temperature in superconductors: a self-consistent approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03771.pdf">https://arxiv.org/pdf/2005.03771.pdf</a></span> Quantum field theory with the generalized uncertainty principle I: scalar electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03772.pdf">https://arxiv.org/pdf/2005.03772.pdf</a></span> Quantum field theory with the generalized uncertainty principle II: Quantum Electrodynamics</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
