--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -192,7 +192,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04678.pdf">https://arxiv.org/pdf/2005.04678.pdf</a></span> A new decomposition of the Kubo-Bastin formula</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04250.pdf">https://arxiv.org/pdf/2005.04250.pdf</a></span> Non-Wilson-Fisher kinks of O(N) numerical bootstrap: from the deconfined phase transition to a putative new family of CFTs</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04238.pdf">https://arxiv.org/pdf/2005.04238.pdf</a></span> Density functional approach to correlated moir ́e states: itinerant magnetism *** (Hiroki Isobe, Liang Fu)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04327.pdf">https://arxiv.org/pdf/2005.04327.pdf</a></span> <b>Quest for New Quantum States via Field-Editing Technology</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04327.pdf">https://arxiv.org/pdf/2005.04327.pdf</a></span> Quest for New Quantum States via Field-Editing Technology</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04695.pdf">https://arxiv.org/pdf/2005.04695.pdf</a></span> Quantum spin liquids in a square lattice subject to an Abelian flux and its experimental observation in cold atoms or photonic systems ** (Jinwu Ye)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.05247.pdf">https://arxiv.org/pdf/2005.05247.pdf</a></span> Perspective on Metallic Antiferromagnets</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04932.pdf">https://arxiv.org/pdf/2005.04932.pdf</a></span> Shift of the critical temperature in superconductors: a self-consistent approach</p>
