--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -177,27 +177,59 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03656">https://arxiv.org/abs/2005.03656</a></span> Chiral Induced Spin Selectivity as a Spontaneous Intertwined Order</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States:Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects (Juven Wang)</p><br>
 <p class="p1">20200511</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03674.pdf">https://arxiv.org/pdf/2005.03674.pdf</a></span> Unconventional Topological Insulators from Extended Topological Band Degeneracies</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03676.pdf">https://arxiv.org/pdf/2005.03676.pdf</a></span> Thermal Order in Conformal Theories ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04124.pdf">https://arxiv.org/pdf/2005.04124.pdf</a></span> Symmetry-mixed bound-state order: extended degeneracy of (d + ig)-superconductivity in Sr2RuO4 **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04013.pdf">https://arxiv.org/pdf/2005.04013.pdf</a></span> A Unified Description of Superconductivity: Electron Density Dynamic’s Response to Phonons at the Brillouin Zone Boundary Driven Real Space Electron-Hole Pairing Characterized by CPT Symmetry</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03679.pdf">https://arxiv.org/pdf/2005.03679.pdf</a></span> Time-reversal-invariant C2-symmetric higher-order topological superconductors *** (Das Sarma)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.12191.pdf">https://arxiv.org/pdf/2004.12191.pdf</a></span> Causality of black holes in 4-dimensional Einstein-Gauss-Bonnet-Maxwell theory (Sang-Jin Sin)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1912.10997.pdf">https://arxiv.org/pdf/1912.10997.pdf</a></span> Markov Chain Monte Carlo Methods in Quantum Field Theories: A Modern Primer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03674">https://arxiv.org/abs/2005.03674</a></span> Unconventional Topological Insulators from Extended Topological Band Degeneracies</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03676">https://arxiv.org/abs/2005.03676</a></span> Thermal Order in Conformal Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04124">https://arxiv.org/abs/2005.04124</a></span> Symmetry-mixed bound-state order: extended degeneracy of (d + ig)-superconductivity in Sr2RuO4 **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04013">https://arxiv.org/abs/2005.04013</a></span> A Unified Description of Superconductivity: Electron Density Dynamic’s Response to Phonons at the Brillouin Zone Boundary Driven Real Space Electron-Hole Pairing Characterized by CPT Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03679">https://arxiv.org/abs/2005.03679</a></span> Time-reversal-invariant C2-symmetric higher-order topological superconductors *** (Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.12191">https://arxiv.org/abs/2004.12191</a></span> Causality of black holes in 4-dimensional Einstein-Gauss-Bonnet-Maxwell theory (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.10997">https://arxiv.org/abs/1912.10997</a></span> Markov Chain Monte Carlo Methods in Quantum Field Theories: A Modern Primer</p>
 <p class="p2"><br></p>
 <p class="p1">20200512</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04821.pdf">https://arxiv.org/pdf/2005.04821.pdf</a></span> Topological characterization of one-dimensional open fermionic systems</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.05028.pdf">https://arxiv.org/pdf/2005.05028.pdf</a></span> Magnetic monopoles and fermion number violation in chiral matter</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04433.pdf">https://arxiv.org/pdf/2005.04433.pdf</a></span> Hinge solitons in three-dimensional second-order topological insulators</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04678.pdf">https://arxiv.org/pdf/2005.04678.pdf</a></span> A new decomposition of the Kubo-Bastin formula</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04250.pdf">https://arxiv.org/pdf/2005.04250.pdf</a></span> Non-Wilson-Fisher kinks of O(N) numerical bootstrap: from the deconfined phase transition to a putative new family of CFTs</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04238.pdf">https://arxiv.org/pdf/2005.04238.pdf</a></span> Density functional approach to correlated moir ́e states: itinerant magnetism *** (Hiroki Isobe, Liang Fu)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04327.pdf">https://arxiv.org/pdf/2005.04327.pdf</a></span> Quest for New Quantum States via Field-Editing Technology</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04695.pdf">https://arxiv.org/pdf/2005.04695.pdf</a></span> Quantum spin liquids in a square lattice subject to an Abelian flux and its experimental observation in cold atoms or photonic systems ** (Jinwu Ye)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.05247.pdf">https://arxiv.org/pdf/2005.05247.pdf</a></span> Perspective on Metallic Antiferromagnets</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.04932.pdf">https://arxiv.org/pdf/2005.04932.pdf</a></span> Shift of the critical temperature in superconductors: a self-consistent approach</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03771.pdf">https://arxiv.org/pdf/2005.03771.pdf</a></span> Quantum field theory with the generalized uncertainty principle I: scalar electrodynamics</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2005.03772.pdf">https://arxiv.org/pdf/2005.03772.pdf</a></span> Quantum field theory with the generalized uncertainty principle II: Quantum Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04821">https://arxiv.org/abs/2005.04821</a></span> Topological characterization of one-dimensional open fermionic systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05028">https://arxiv.org/abs/2005.05028</a></span> Magnetic monopoles and fermion number violation in chiral matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04433">https://arxiv.org/abs/2005.04433</a></span> Hinge solitons in three-dimensional second-order topological insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04678">https://arxiv.org/abs/2005.04678</a></span> A new decomposition of the Kubo-Bastin formula</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04250">https://arxiv.org/abs/2005.04250</a></span> Non-Wilson-Fisher kinks of O(N) numerical bootstrap: from the deconfined phase transition to a putative new family of CFTs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04238">https://arxiv.org/abs/2005.04238</a></span> Density functional approach to correlated moir ́e states: itinerant magnetism *** (Hiroki Isobe, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04327">https://arxiv.org/abs/2005.04327</a></span> Quest for New Quantum States via Field-Editing Technology</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04695">https://arxiv.org/abs/2005.04695</a></span> Quantum spin liquids in a square lattice subject to an Abelian flux and its experimental observation in cold atoms or photonic systems ** (Jinwu Ye)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05247">https://arxiv.org/abs/2005.05247</a></span> Perspective on Metallic Antiferromagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04932">https://arxiv.org/abs/2005.04932</a></span> Shift of the critical temperature in superconductors: a self-consistent approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03771">https://arxiv.org/abs/2005.03771</a></span> Quantum field theory with the generalized uncertainty principle I: scalar electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03772">https://arxiv.org/abs/2005.03772</a></span> Quantum field theory with the generalized uncertainty principle II: Quantum Electrodynamics</p><br>
+<p class="p1">20200513</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05352">https://arxiv.org/abs/2005.05352</a></span> Aharonov-Bohm oscillations in twisted bilayer graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05343">https://arxiv.org/abs/2005.05343</a></span> Intrinsic Sign Problems in Topological Quantum Field Theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05362">https://arxiv.org/abs/2005.05362</a></span> A minimal model for fast scrambling *** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04548">https://arxiv.org/abs/2005.04548</a></span> Stability of the Spectral Gap for Lattice Fermions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05621">https://arxiv.org/abs/2005.05621</a></span> Kibble-Zurek mechanism in a Dissipative Transverse Ising Chain<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05373">https://arxiv.org/abs/2005.05373</a></span> Density-Wave States in Twisted Double-Bilayer Graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05685">https://arxiv.org/abs/2005.05685</a></span> Index theorem on chiral Landau bands for topological fermions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05566">https://arxiv.org/abs/2005.05566</a></span> Intrinsic sign problem in fermionic and bosonic chiral topological matter<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05932">https://arxiv.org/abs/2005.05932</a></span> Phase diagram and mechanism of superconductivity in a strongly correlated electron system<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03617">https://arxiv.org/abs/2004.03617</a></span> Strongly coupled quantum phonon fluid in a solvable model *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.00454">https://arxiv.org/abs/1911.00454</a></span> Supersymmetric Dirac-Hamiltonians in (1 + 1) dimensions revisited **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.06341">https://arxiv.org/abs/1910.06341</a></span> Statistical localization: from strong fragmentation to strong edge modes ** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.11619">https://arxiv.org/abs/1909.11619</a></span> Quantum exceptional points of non-Hermitian Hamiltonians and Liouvillians: The effects of quantum jumps<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200514</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06218">https://arxiv.org/abs/2005.06218</a></span> Hofstadter butterfly and the quantum Hall effect in twisted double bilayer graphenes *** (Pilkyung Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05983">https://arxiv.org/abs/2005.05983</a></span> Geometric Approach to 3D Interfaces at Strong Coupling<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05987">https://arxiv.org/abs/2005.05987</a></span> Pauli limited d-wave superconductors: Quantum breached pair phase and thermal transitions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06374">https://arxiv.org/abs/2005.06374</a></span> Deterministic quantum mechanics: the mathematical equations *** (Gerard ’t Hooft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.05071">https://arxiv.org/abs/1904.05071</a></span> Non-Lorentzian RG flows and Supersymmetry<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01231">https://arxiv.org/abs/2005.01231</a></span> TOWARDS FIELD THEORY OF TURBULENCE<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200515</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06481">https://arxiv.org/abs/2005.06481</a></span> Unconventional critical exponents at dynamical quantum phase transitions in a random Ising chain<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06759">https://arxiv.org/abs/2005.06759</a></span> A non-iterative method for the vertex corrections of the Kubo formula for electric conductivity<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06589">https://arxiv.org/abs/2005.06589</a></span> Quantum chaos in a system with high degree of symmetries<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06896">https://arxiv.org/abs/2005.06896</a></span> Impurity-induced resonant spinon zero modes in Dirac quantum spin-liquids<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06501">https://arxiv.org/abs/2005.06501</a></span> An Operational Definition of Topological Order<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06572">https://arxiv.org/abs/2005.06572</a></span> Computing classification of interacting fermionic symmetry-protected topological phases using topological invariants ** (Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06729">https://arxiv.org/abs/2005.06729</a></span> DMFT reveals the non-Hermitian topology in heavy-fermion systems ** (Yang Qi, Hiroki Isobe, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.11662">https://arxiv.org/abs/1906.11662</a></span> A generalized boundary condition applied to Lieb-Schultz-Mattis type ingappabilities and many-body Chern numbers (Masaki Oshikawa)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
